--- a/app/src/main/res/layout/activity_ficha_de_solicitud.xml
+++ b/app/src/main/res/layout/activity_ficha_de_solicitud.xml
@@ -458,66 +458,6 @@
 
                     <ImageView
                         android:layout_width="50dp"
-                        android:src="@drawable/cliente"
-                        android:layout_height="50dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:text="Cliente : "
-                        android:textSize="14sp"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/futura"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:inputType="textCapSentences"
-                        android:fontFamily="@font/futura"
-                        android:id="@+id/edtNombreClienteSolicitud"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:src="@drawable/telcliente"
-                        android:layout_height="50dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:text="Teléfono : "
-                        android:textSize="14sp"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/futura"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:inputType="textCapSentences"
-                        android:fontFamily="@font/futura"
-                        android:id="@+id/edtTelefonoSolicitud"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="50dp"
                         android:src="@drawable/direccionclientepedidos"
                         android:layout_height="50dp"/>
                     <TextView
@@ -541,49 +481,11 @@
                         android:layout_height="wrap_content"/>
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="0dp"
+                    android:id="@+id/txtPrecioDeliverySol"
+                    android:layout_height="0dp"/>
 
-                    <ImageView
-                        android:layout_width="50dp"
-                        android:src="@drawable/referencia"
-                        android:layout_height="50dp"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:text="Referencia : "
-                        android:textSize="14sp"
-                        android:textColor="#000"
-                        android:textStyle="bold"
-                        android:fontFamily="@font/futura"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"/>
-
-                    <EditText
-                        android:layout_width="match_parent"
-                        android:textSize="14sp"
-                        android:textStyle="bold"
-                        android:inputType="textCapSentences"
-                        android:fontFamily="@font/futura"
-                        android:id="@+id/edtReferenciaSolicitud"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-
-                <Button
-                    android:layout_width="match_parent"
-                    android:text="Solicitar delivery"
-                    android:id="@+id/btnSolicitar"
-                    android:layout_marginTop="7dp"
-                    android:layout_weight="5"
-                    android:background="@drawable/redondo"
-                    android:backgroundTint="@drawable/btn_background_rosa"
-                    android:fontFamily="@font/futura"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    android:textColor="#fff"
-                    android:layout_height="wrap_content"/>
             </LinearLayout>
 
         </androidx.cardview.widget.CardView>
@@ -602,6 +504,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/map_view" />
+
     </LinearLayout>
+
+    <Button
+        android:layout_width="150dp"
+        android:layout_gravity="bottom"
+        android:id="@+id/CloseMap"
+        android:layout_marginLeft="10dp"
+        android:textColor="#fff"
+        android:background="@drawable/redondo"
+        android:backgroundTint="@drawable/btn_background_negro"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/map_container"
+        android:layout_marginBottom="10dp"
+        android:text="Cerrar Mapa" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
