--- a/app/src/main/res/layout/activity_menu_proveedor.xml
+++ b/app/src/main/res/layout/activity_menu_proveedor.xml
@@ -16,6 +16,11 @@
         android:layout_marginTop="6dp"
         android:layout_height="match_parent">
 
+        <TextView
+            android:layout_width="0dp"
+            android:id="@+id/urlPhotoProv"
+            android:layout_height="0dp"/>
+
         <RelativeLayout
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
